--- a/config.yml
+++ b/config.yml
@@ -38,7 +38,7 @@ pipeline:
      epochs: 100
      constrain_similarities: true
    - name: FallbackClassifier
-     threshold: 0.3
+     threshold: 0.7
      ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
@@ -48,7 +48,6 @@ policies:
 # # If you'd like to customize them, uncomment and adjust the policies.
 # # See https://rasa.com/docs/rasa/policies for more information.
    - name: MemoizationPolicy
-   - name: RulePolicy
    - name: UnexpecTEDIntentPolicy
      max_history: 5
      epochs: 100
@@ -56,3 +55,7 @@ policies:
      max_history: 5
      epochs: 100
      constrain_similarities: true
+   - name: RulePolicy
+     core_fallback_threshold: 0.4
+     core_fallback_action_name: "action_default_fallback"
+     enable_fallback_prediction: True
