--- a/train_test_split/training_data.yml
+++ b/train_test_split/training_data.yml
@@ -2,155 +2,277 @@ version: "3.1"
 nlu:
 - intent: bot_challenge
   examples: |
+    - are you a bot?
+    - are you a human?
     - am I talking to a bot?
 - intent: ask_for_research_prof
   examples: |
     - I need professor for [artificial intelligence](topic)
+    - help me find professors for [cybersecurity](topic)
+    - show me professors for [big data](topic)
 - intent: ask_student_program_requirements
   examples: |
+    - can i know student and program admission requirements at lakehead
+    - what are student and program admission requirements
     - want to know student and program admission requirements
 - intent: program_type
   examples: |
     - can i know more about speciality programs
+    - want to learn about undergraduate programs
+    - need to learn about graduate programs
 - intent: ask_specific_deadline
   examples: |
+    - can i know admission deadline for [spring/summer](program_intake)
     - I need admission deadline for [undergraduate fall](program_intake)
     - want to know admission deadline for [spring/summer](program_intake)
 - intent: undergraduate_application
   examples: |
+    - select undergraduate
     - choose undergraduate
+    - undergraduate application
 - intent: graduate_application
   examples: |
     - applying for graduate studies
+    - select graduate
+    - choose graduate
 - intent: check_admission_info
   examples: |
     - Can you please tell me about the next intake
+    - When is the next intake
+    - Tell me about the next intake
+    - When will next intake happen
 - intent: request_proff_name
   examples: |
-    - get the contact information of professor
     - show me contact information of professor
+    - i want contact information of professor
+    - get the contact information of professor
+    - professor contact
 - intent: ask_admission_requirements
   examples: |
-    - need admission requirements
+    - what are the admission requirements at lakehead
+    - admission requirements
+    - i want to know the requirements for admissions
+    - can i know about the admission requirements at lakehead
 - intent: ask_ielts_requirements
   examples: |
-    - want to learn about english language proficiency
+    - need to learn about english language proficiency
+    - can i know more about english language proficiency
     - english language proficiency requirements
+    - want to know more about english language proficiency
 - intent: ask_admission_deadline
   examples: |
     - need admission deadlines
+    - give me admission deadlines
+    - Can I know about admissions deadlines
+    - need final dates for applying
 - intent: give_feedback
   examples: |
+    - how to give feedback
     - want to give feedback
-    - provide feedback
+    - can i give feeback
+    - feedback form
 - intent: after_applying
   examples: |
+    - what do i do after applying
     - what to expect after applying
+    - post application steps
+    - things to do after applying
 - intent: ask_track_application_status
   examples: |
-    - how to know application status
+    - track application status
+    - need help tracking application status
     - can i know application status
+    - application status
 - intent: payment_options
   examples: |
+    - methods of payment
+    - payment methods
+    - how can i pay
     - modes of payment
 - intent: ask_defer_admission
   examples: |
-    - need to start my program at a later semester
     - want to defer my admission
+    - can i start my studies at a later date
+    - how do i defer my admission
+    - need to start my program at a later semester
 - intent: new_student
   examples: |
+    - things new students need
+    - resources for new students
+    - what does a new student need to know
     - new student
 - intent: ask_housing
   examples: |
     - student needs information on residence
-    - housing and residence
+    - new student needs housing information
+    - want to learn more about residence
+    - i need more information on housing
 - intent: affirm
   examples: |
-    - that sounds good
+    - of course
+    - indeed
     - correct
+    - yes
+    - y
 - intent: check_upcoming_holidays
   examples: |
     - tell me about the upcoming holidays
+    - want to know about holidays
+    - Show me this month's holidays
+    - like to know the events for this month
     - When is my next holiday
 - intent: am_student
   examples: |
     - i am a graduate student
+    - i am an undergraduate student
+    - i am an international student
+    - I am a special student
+    - i am a student applicant
 - intent: low_average
   examples: |
-    - did not achieve cut-off average
+    - not enough grades
+    - have low average
+    - low grades
+    - did not achieve the required grade
     - do not meet admission requirements
 - intent: ask_study_permit_info
   examples: |
+    - what is a student visa
+    - need to know about study permit
     - how to apply for study permit
+    - how to get study permit
     - study permit
 - intent: search_facebook
   examples: |
     - search facebook posts
-    - lakehead's facebook
+    - want to search facebook
+    - social media
+    - need to look at facebook
+    - lakehdead social media
 - intent: ask_accept_admission_offer
   examples: |
     - what can i do to accept admission
+    - admission offer acceptance
+    - accept admission offer
+    - steps to take after being offered admission
     - need to accept admission offer
 - intent: pay_confirmation_deposit
   examples: |
+    - pay confirmation deposit
+    - how to pay confirmation deposit
+    - need to play confirmation deposit
     - admission confirmation deposit
 - intent: ask_tuition_fee
   examples: |
     - tuition and fees
     - tuition fee
+    - i want to learn more about the tuition and fees
+    - need to learn about the fee structure
+    - can i know about tuition fee
 - intent: deny
   examples: |
+    - I don't think so
+    - no way
+    - n
     - never
+    - don't like that
     - no
 - intent: campus_facilities
   examples: |
-    - what is campus life like at lakehead
+    - what facilities do lakehead campuses have
+    - tell me about campus life
+    - How can i learn about sports and recreational activities
     - learn more about residence and housing
+    - what is campus life like at lakehead
 - intent: ask_international_student_services
   examples: |
-    - have to speak to an advisor for immigration
     - who to speak for immigration advice
+    - how to get help for immigration
+    - have to speak to an advisor for immigration
+    - want to learn more about immigration from advisor
+    - advice on immigration
+    - need help from advisor with immigration matters
 - intent: ask_admission_decision_timeline
   examples: |
-    - when will i know admission decision
+    - admission decision
     - application outcome
+    - when will i know admission decision
     - when can i know application outcome
+    - can i know admission decision
+    - admission decision outcome
 - intent: ask_myinfo
   examples: |
-    - how to use myInfo
+    - what is myInfo
     - more information about myInfo
+    - myInfo
+    - myInfo link
+    - myInfo login
 - intent: password_troubleshoot
   examples: |
+    - cannot log into myInfo
+    - password issues
+    - password troubleshoot
     - myInfo password
+    - problems with myInfo password
     - myInfo troubleshoot
 - intent: apply_to_lakehead
   examples: |
     - want to start application
+    - lakehead university application process
+    - looking to apply to lakehead university
+    - need to apply to lakehead
+    - apply to lakehead university
+    - steps to apply to lakehead
     - want to apply to lakehead
 - intent: goodbye
   examples: |
-    - see you later
-    - have a nice day
+    - good by
     - see you around
+    - bye
+    - see you later
+    - cu
+    - goodbye
+    - good night
+    - cee you later
 - intent: greet
   examples: |
-    - hey there
-    - goodevening
-    - good evening
+    - hi
     - good afternoon
+    - hey there
+    - goodmorning
+    - hello there
+    - let's go
+    - hey
+    - hello
+    - moin
+    - hey dude
 - intent: mood_great
   examples: |
     - I am going to save the world
-    - I am amazing
+    - I am feeling very good
+    - feeling like a king
     - great
+    - super stoked
+    - so perfect
     - perfect
+    - I am great
+    - I am amazing
+    - wonderful
     - extremely good
+    - so so perfect
 - intent: mood_unhappy
   examples: |
-    - unhappy
+    - super sad
+    - my day was horrible
+    - very sad
+    - not very good
     - I don't feel very well
-    - I am disappointed
     - so saad
+    - I am disappointed
+    - so sad
+    - not good
+    - unhappy
+    - I'm so sad
 - lookup: topic
   examples: |
     - networks
